--- a/Planets.html
+++ b/Planets.html
@@ -14,13 +14,13 @@
     Your browser does not support the video tag.
     </video>
     <div class="relative z-10 flex flex-col items-center justify-center h-full bg-black bg-opacity-50">
-        <h1 class="text-5xl font-bold mb-10 text-center text-white">Планеты Солнечной Системы</h1>
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-10 px-5">
+        <h1 class="text-4xl sm:text-5xl font-bold mb-8 sm:mb-10 text-center text-white px-2">Планеты Солнечной Системы</h1>
+        <div class="grid grid-cols-2 sm:grid-cols-2 lg:grid-cols-4 gap-6 sm:gap-10 px-2 sm:px-5">
           <!-- Меркурий -->
           <div class="relative group flex flex-col items-center">
-            <img class="h-32 w-32 rounded-full" src="Images_Videos/Mercury.png" alt="Меркурий">
-            <p class="text-xl mt-4 text-white">Меркурий</p>
-            <div class="absolute bottom-0 left-1/2 transform -translate-x-1/2 translate-y-full opacity-0 group-hover:translate-y-0 group-hover:opacity-100 transition duration-300 bg-gray-800 bg-opacity-90 p-4 rounded shadow-lg w-64 text-sm">
+            <img class="h-24 w-24 sm:h-32 sm:w-32 rounded-full" src="Images_Videos/Mercury.png" alt="Меркурий">
+            <p class="text-lg sm:text-xl mt-2 sm:mt-4 text-white">Меркурий</p>
+            <div class="absolute bottom-0 left-1/2 transform -translate-x-1/2 translate-y-full opacity-0 group-hover:translate-y-0 group-hover:opacity-100 transition duration-300 bg-gray-800 bg-opacity-90 p-3 sm:p-4 rounded shadow-lg w-48 sm:w-64 text-xs sm:text-sm">
               <h2 class="font-bold text-center mb-2 text-white">Меркурий</h2>
               <p class="text-white">Первая планета от Солнца<br>Диаметр: 4879 км<br>Средняя температура: -180°C до 430°C</p>
             </div>
@@ -28,9 +28,9 @@
   
           <!-- Венера -->
           <div class="relative group flex flex-col items-center">
-            <img class="h-32 w-32 rounded-full" src="Images_Videos/Venera.png" alt="Венера">
-            <p class="text-xl mt-4 text-white">Венера</p>
-            <div class="absolute bottom-0 left-1/2 transform -translate-x-1/2 translate-y-full opacity-0 group-hover:translate-y-0 group-hover:opacity-100 transition duration-300 bg-gray-800 bg-opacity-90 p-4 rounded shadow-lg w-64 text-sm">
+            <img class="h-24 w-24 sm:h-32 sm:w-32 rounded-full" src="Images_Videos/Venera.png" alt="Венера">
+            <p class="text-lg sm:text-xl mt-2 sm:mt-4 text-white">Венера</p>
+            <div class="absolute bottom-0 left-1/2 transform -translate-x-1/2 translate-y-full opacity-0 group-hover:translate-y-0 group-hover:opacity-100 transition duration-300 bg-gray-800 bg-opacity-90 p-3 sm:p-4 rounded shadow-lg w-48 sm:w-64 text-xs sm:text-sm">
               <h2 class="font-bold text-center mb-2 text-white">Венера</h2>
               <p class="text-white">Вторая планета от Солнца<br>Диаметр: 12104 км<br>Средняя температура: около +475°C</p>
             </div>
@@ -38,19 +38,19 @@
   
           <!-- Земля -->
           <div class="relative group flex flex-col items-center">
-            <img class="h-32 w-32 rounded-full" src="Images_Videos/earth.png" alt="Венера">
-            <p class="text-xl mt-4 text-white">Земля</p>
-            <div class="absolute bottom-0 left-1/2 transform -translate-x-1/2 translate-y-full opacity-0 group-hover:translate-y-0 group-hover:opacity-100 transition duration-300 bg-gray-800 bg-opacity-90 p-4 rounded shadow-lg w-64 text-sm">
+            <img class="h-24 w-24 sm:h-32 sm:w-32 rounded-full" src="Images_Videos/earth.png" alt="Земля">
+            <p class="text-lg sm:text-xl mt-2 sm:mt-4 text-white">Земля</p>
+            <div class="absolute bottom-0 left-1/2 transform -translate-x-1/2 translate-y-full opacity-0 group-hover:translate-y-0 group-hover:opacity-100 transition duration-300 bg-gray-800 bg-opacity-90 p-3 sm:p-4 rounded shadow-lg w-48 sm:w-64 text-xs sm:text-sm">
               <h2 class="font-bold text-center mb-2 text-white">Земля</h2>
               <p class="text-white">Третья планета от Солнца<br>Диаметр: 12742 км<br>Температура: от -89°C до +58°C</p>
             </div>
           </div>
 
-          <!-- марс -->
+          <!-- Марс -->
           <div class="relative group flex flex-col items-center">
-            <img class="h-32 w-32 rounded-full" src="Images_Videos/Mars.png" alt="Венера">
-            <p class="text-xl mt-4 text-white">Марс</p>
-            <div class="absolute bottom-0 left-1/2 transform -translate-x-1/2 translate-y-full opacity-0 group-hover:translate-y-0 group-hover:opacity-100 transition duration-300 bg-gray-800 bg-opacity-90 p-4 rounded shadow-lg w-64 text-sm">
+            <img class="h-24 w-24 sm:h-32 sm:w-32 rounded-full" src="Images_Videos/Mars.png" alt="Марс">
+            <p class="text-lg sm:text-xl mt-2 sm:mt-4 text-white">Марс</p>
+            <div class="absolute bottom-0 left-1/2 transform -translate-x-1/2 translate-y-full opacity-0 group-hover:translate-y-0 group-hover:opacity-100 transition duration-300 bg-gray-800 bg-opacity-90 p-3 sm:p-4 rounded shadow-lg w-48 sm:w-64 text-xs sm:text-sm">
               <h2 class="font-bold text-center mb-2 text-white">Марс</h2>
               <p class="text-white">Четвёртая планета от Солнца<br>Диаметр: 6772 км<br>Температура: от -153°C до +30°C</p>
             </div>
@@ -58,9 +58,9 @@
 
           <!-- Юпитер -->
           <div class="relative group flex flex-col items-center">
-            <img class="h-32 w-32 rounded-full" src="Images_Videos/Ypiter.png" alt="Венера">
-            <p class="text-xl mt-4 text-white">Юпитер</p>
-            <div class="absolute bottom-0 left-1/2 transform -translate-x-1/2 translate-y-full opacity-0 group-hover:translate-y-0 group-hover:opacity-100 transition duration-300 bg-gray-800 bg-opacity-90 p-4 rounded shadow-lg w-64 text-sm">
+            <img class="h-24 w-24 sm:h-32 sm:w-32 rounded-full" src="Images_Videos/Ypiter.png" alt="Марс">
+            <p class="text-lg sm:text-xl mt-2 sm:mt-4 text-white">Юпитер</p>
+            <div class="absolute bottom-0 left-1/2 transform -translate-x-1/2 translate-y-full opacity-0 group-hover:translate-y-0 group-hover:opacity-100 transition duration-300 bg-gray-800 bg-opacity-90 p-3 sm:p-4 rounded shadow-lg w-48 sm:w-64 text-xs sm:text-sm">
               <h2 class="font-bold text-center mb-2 text-white">Юпитер</h2>
               <p class="text-white">Пятая планета от Солнца<br>Диаметр: 143000 км<br>Средняя температура: около +130°C</p>
             </div>
@@ -68,9 +68,9 @@
 
           <!-- Сатурн -->
           <div class="relative group flex flex-col items-center">
-            <img class="h-32 w-50 rounded-full" src="Images_Videos/Saturn.png" alt="Венера">
-            <p class="text-xl mt-4 text-white">Сатурн</p>
-            <div class="absolute bottom-0 left-1/2 transform -translate-x-1/2 translate-y-full opacity-0 group-hover:translate-y-0 group-hover:opacity-100 transition duration-300 bg-gray-800 bg-opacity-90 p-4 rounded shadow-lg w-64 text-sm">
+            <img class="h-24 w-24 sm:h-32 sm:w-32 rounded-full" src="Images_Videos/Saturn.png" alt="Марс">
+            <p class="text-lg sm:text-xl mt-2 sm:mt-4 text-white">Сатурн</p>
+            <div class="absolute bottom-0 left-1/2 transform -translate-x-1/2 translate-y-full opacity-0 group-hover:translate-y-0 group-hover:opacity-100 transition duration-300 bg-gray-800 bg-opacity-90 p-3 sm:p-4 rounded shadow-lg w-48 sm:w-64 text-xs sm:text-sm">
               <h2 class="font-bold text-center mb-2 text-white">Сатурн</h2>
               <p class="text-white">Шестая планета от Солнца<br>Диаметр: 120536 км<br>Средняя температура: -180°C</p>
             </div>
@@ -78,9 +78,9 @@
 
           <!-- Уран -->
           <div class="relative group flex flex-col items-center">
-            <img class="h-32 w-32 rounded-full" src="Images_Videos/Uran.png" alt="Венера">
-            <p class="text-xl mt-4 text-white">Уран</p>
-            <div class="absolute bottom-0 left-1/2 transform -translate-x-1/2 translate-y-full opacity-0 group-hover:translate-y-0 group-hover:opacity-100 transition duration-300 bg-gray-800 bg-opacity-90 p-4 rounded shadow-lg w-64 text-sm">
+            <img class="h-24 w-24 sm:h-32 sm:w-32 rounded-full" src="Images_Videos/Uran.png" alt="Марс">
+            <p class="text-lg sm:text-xl mt-2 sm:mt-4 text-white">Уран</p>
+            <div class="absolute bottom-0 left-1/2 transform -translate-x-1/2 translate-y-full opacity-0 group-hover:translate-y-0 group-hover:opacity-100 transition duration-300 bg-gray-800 bg-opacity-90 p-3 sm:p-4 rounded shadow-lg w-48 sm:w-64 text-xs sm:text-sm">
               <h2 class="font-bold text-center mb-2 text-white">Уран</h2>
               <p class="text-white">Седьмая планета от Солнца<br>Диаметр: 51118 км<br>Средняя температура: -210°C</p>
             </div>
@@ -88,15 +88,16 @@
 
           <!-- Нептун -->
           <div class="relative group flex flex-col items-center">
-            <img class="h-32 w-32 rounded-full" src="Images_Videos/Neptun.png" alt="Венера">
-            <p class="text-xl mt-4 text-white">Нептун</p>
-            <div class="absolute bottom-0 left-1/2 transform -translate-x-1/2 translate-y-full opacity-0 group-hover:translate-y-0 group-hover:opacity-100 transition duration-300 bg-gray-800 bg-opacity-90 p-4 rounded shadow-lg w-64 text-sm">
+            <img class="h-24 w-24 sm:h-32 sm:w-32 rounded-full" src="Images_Videos/Neptun.png" alt="Марс">
+            <p class="text-lg sm:text-xl mt-2 sm:mt-4 text-white">Нептун</p>
+            <div class="absolute bottom-0 left-1/2 transform -translate-x-1/2 translate-y-full opacity-0 group-hover:translate-y-0 group-hover:opacity-100 transition duration-300 bg-gray-800 bg-opacity-90 p-3 sm:p-4 rounded shadow-lg w-48 sm:w-64 text-xs sm:text-sm">
               <h2 class="font-bold text-center mb-2 text-white">Нептун</h2>
               <p class="text-white">Восьмая планета от Солнца<br>Диаметр: 49244 км<br>Средняя температура: -218°C</p>
             </div>
           </div>
+
         </div>
-        <a href="Search_info.html" class="px-6 py-3 mt-10 bg-blue-500 hover:bg-blue-700 text-white font-bold rounded-md transition">Дальше</a>
-      </div>
+        <a href="Search_info.html" class="px-4 sm:px-6 py-2 sm:py-3 mt-20 bg-blue-500 hover:bg-blue-700 text-white font-bold rounded-md transition">Дальше</a>
+    </div>
 </body>
 </html>
